# oop-assessment

./: Employee.java  Experience.java  Fresher.java  Intern.java  ManageEmployee.java
py-exercises/: class_method.py  employee.py  exercise_3.py  exercise_4.py  exercise_5.py  inheritance.py  magic_methods.py  oop_excercise.py  polymorphism.py  property_decorator.py  pyproject.toml
py-exercises/.github/workflows/: pylint.yml
