[tool.poetry]
name = "py-exercises"
version = "0.1.0"
description = ""
authors = ["Hanh Van <vhh2808@gmail.com>"]
readme = "README.md"
packages = [{include = "py_exercises"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
